# clover

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  test-report.xml
.github/workflows/: build.yml  pythonapp.yml  tests.yml
clover/: __init__.py  models.py  resources.py  schema.py
db/: Dockerfile  README.md  init.sql
src/transactions/: app.py  console.py
tests/: __init__.py  test_app.py  test_db.py  test_models.py
transactions/: api.py  app.py  db.py  models.py  resources.py  schema.py
