[tool.poetry]
name = "transactions"
version = "0.1.0"
description = "An app to store and serve my personal transactions"
authors = ["martinabeleda <martin.abeleda@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/martinabeleda/transactions/"


[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.1"
flask = "^1.1.2"
markdown = "^3.2.1"
psycopg2-binary = "^2.8.4"
flask-restful = "^0.3.8"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
black = "^19.10b0"
pylint = "^2.4.4"
mypy = "^0.770"
pre-commit = "^2.2.0"

[tool.poetry.scripts]
transactions = "transactions.app:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
